index design change
index design change

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <body>
 	
 	<h1>PhoneGap</h1>
-	<a class="appopen" onClick="OpenLink();">Sign in</a>
+	<a  onClick="OpenLink();">Sign in</a>
     
       
     </body>
